--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,7 @@
     <%-include('partials/header')%>
     <link rel="stylesheet" href="login.css">
 </head>
-<body style="background-image: url();">
+<body style="background-image: url('imagens_sistema/telaFundoLogin.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
 
     <div class="login-container">
         <div class="login-form">
