--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,11 +27,73 @@
                 <button type="submit" class="btn btn-login w-100">Entrar</button>
             </form>
             <div class="forgot-password">
-                <a href="#">Esqueceu a senha?</a>
+                <a href="#" onclick="abrirModal()">Cadastre-se</a><br>
+                <a href="#" onclick="">Esqueceu sua senha?</a>
             </div>
         </div>
     </div>
 
+
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+                <div class="modal-header">
+                    <center><h5 class="modal-title" id="myModalLabel">Cadastro</h5></center>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+            <div class="modal-body">
+                <div class="input-group input-group-sm mb-3">
+                    <span class="input-group-text" id="inputGroup-sizing-sm">Nome</span>
+                    <input type="text" id="nome" placeholder="Digite o nome da empresa" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+                </div>
+                <div class="input-group input-group-sm mb-3">
+                    <span class="input-group-text" id="inputGroup-sizing-sm">Fone</span>
+                    <input type="text" id="telefone" placeholder="Digite o telefone com prefixo" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+                </div>
+                <div class="input-group input-group-sm mb-3">
+                    <span class="input-group-text" id="inputGroup-sizing-sm">Email</span>
+                    <input type="email" id="email" placeholder="Digite o email" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+                </div>
+                <div class="input-group input-group-sm mb-3">
+                    <span class="input-group-text" id="inputGroup-sizing-sm">Cnpj</span>
+                    <input type="text" id="cnpj" placeholder="Digite o cnpj" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+                </div>
+                <div class="input-group input-group-sm mb-3">
+                    <span class="input-group-text" id="inputGroup-sizing-sm">Senha</span>
+                    <input type="password" id="senha" placeholder="Cadastre uma senha" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                <button type="button" onclick="cadastrar()" class="btn btn-primary">Salvar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
+<script>
+    function abrirModal(){
+      // Abre o modal com o ID 'myModal'
+      var modal = new bootstrap.Modal(document.getElementById('myModal'));
+      modal.show();
+    }
+
+    function cadastrar(){
+        const nome = $("#nome").val()
+        const telefone = $("#telefone").val()
+        const email = $("#email").val()
+        const cnpj = $("#cnpj").val()
+        const senha = $("#senha").val()
+        alert(nome)
+        alert(telefone)
+        alert(email)
+        alert(cnpj)
+        alert(senha)
+    }
+</script>
 </html>
