--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <%-include('partials/header')%>
     <link rel="stylesheet" href="login.css">
-</head>
+    <head>
+        <%-include('partials/header')%>
+    </head>
+
 <body style="background-image: url('imagens_sistema/telaFundoLogin.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+    
 
     <div class="login-container">
         <div class="login-form">
             <h2>Login</h2>
-            <form action="#" method="POST">
+            <form action="#" >
                 <!-- Email Field -->
                 <div class="mb-3">
                     <label for="email" class="form-label">Email</label>
@@ -24,7 +24,7 @@
                     <input type="password" class="form-control" id="senha1" placeholder="Digite sua senha" required>
                 </div>
                 <!-- Login Button -->
-                <button type="submit" class="btn btn-login w-100">Entrar</button>
+                <button type="submit" class="btn btn-login w-100" onclick="logar()">Entrar</button>
             </form>
             <div class="forgot-password">
                 <a href="#" onclick="abrirModal()">Cadastre-se</a><br>
@@ -45,23 +45,23 @@
                 </div>
             <div class="modal-body">
                 <div class="input-group input-group-sm mb-3">
-                    <span class="input-group-text" id="inputGroup-sizing-sm">Nome</span>
+                    <span class="input-group-text" id="inputGroup-sizing-sm" style="width: 55px;">Nome</span>
                     <input type="text" id="nome" placeholder="Digite o nome da empresa" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
                 </div>
                 <div class="input-group input-group-sm mb-3">
-                    <span class="input-group-text" id="inputGroup-sizing-sm">Fone</span>
+                    <span class="input-group-text " id="inputGroup-sizing-sm" style="width: 55px;">Fone</span>
                     <input type="text" id="telefone" placeholder="Digite o telefone com prefixo" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
                 </div>
                 <div class="input-group input-group-sm mb-3">
-                    <span class="input-group-text" id="inputGroup-sizing-sm">Email</span>
+                    <span class="input-group-text" id="inputGroup-sizing-sm" style="width: 55px;">Email</span>
                     <input type="email" id="email2" placeholder="Digite o email" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
                 </div>
                 <div class="input-group input-group-sm mb-3">
-                    <span class="input-group-text" id="inputGroup-sizing-sm">Cnpj</span>
-                    <input type="text" id="cnpj" placeholder="Digite o cnpj" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+                    <span class="input-group-text" id="inputGroup-sizing-sm" style="width: 55px;">Cnpj</span>
+                    <input type="text" id="cnpj" placeholder="Digite o cnpj" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm" maxlength="14">
                 </div>
                 <div class="input-group input-group-sm mb-3">
-                    <span class="input-group-text" id="inputGroup-sizing-sm">Senha</span>
+                    <span class="input-group-text" id="inputGroup-sizing-sm" style="width: 55px;">Senha</span>
                     <input type="password" id="senha2" placeholder="Cadastre uma senha" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
                 </div>
             </div>
@@ -82,7 +82,7 @@
         var modal = new bootstrap.Modal(document.getElementById('myModal'));
         modal.show();
     }
-
+//cadastro
     function cadastrar(){
         const nome = $("#nome").val()
         const telefone = $("#telefone").val()
@@ -98,12 +98,57 @@
             data: JSON.stringify(body)
         }).done((response)=>{
             if(response.success){
-                alert('inserido com sucesso')
+                Swal.fire({
+                    icon: 'success',
+                    position: 'top-end',
+                    title: 'Cadastrado com sucesso',
+                    timer: 1500
+                })
             }
             else{
-                alert('Erro ao inserir')
+                Swal.fire({
+                    icon: 'error',
+                    position: 'top-end',
+                    title: 'Erro ao cadastrar',
+                    timer: 1500
+                })
             }
         })
+    }
+
+    //logar
+    function logar(){
+        const email = $("#email1").val()
+        const senha = $("#senha1").val()
+        const body = {email, senha}
+
+        $.ajax({
+            url: '/logar',
+            method: 'POST',
+            contentType: 'application/json',
+            data: JSON.stringify(body)
+        }).done((response)=>{
+            if(response.success){
+                Swal.fire({
+                    icon: 'success',
+                    position: 'top-end',
+                    title: 'Seja bem vindo',
+                    timer: 1500
+                }).then(()=>{
+                    window.location.href = '/dashboard'
+                })
+            }
+            else{
+                Swal.fire({
+                    icon: 'error',
+                    position: 'top-end',
+                    title: 'Email ou senha incorretos',
+                    timer: 1500
+                })
+            }
+        })
+
+
     }
 </script>
 </html>
