--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -82,6 +82,11 @@
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script> <!-- Ícones -->
+
+
+
     
 </head>
 
